@@ -1,5 +1,8 @@
 2011-05-23  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c/49120
+	* gcc.dg/pr49120.c: New test.
+
 	PR middle-end/48973
 	* gcc.c-torture/execute/pr48973-1.c: New test.
 	* gcc.c-torture/execute/pr48973-2.c: New test.
